--- a/Training/Topics/testSetup/index.html
+++ b/Training/Topics/testSetup/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript"
             src="../../../../extzip/ext-4.2.1.883/ext-all.js"></script>
     <script type="text/javascript"
-            src="messageBox.js"></script>
+            src="helloExt.js"></script>
 </head>
 </body>
 </html>
