--- a/Training/index.html
+++ b/Training/index.html
@@ -29,7 +29,7 @@
             <li><a href="/Topics/#">Unit Testing of ExtJS</a></li>
             <li><a href="/Topics/Jasmine/index.html">Jasmine Primer</a></li>
             <li><a href="/Topics/HTML5CSS3/index.html">HTML5 & CSS Primer</a></li>
-            <li><a href="/Topics/HTML5CSS3/index.html">Test Your ExtJS
+            <li><a href="/Topics/testSetup/index.html">Test Your ExtJS
                 Setup</a></li>
             <!--<li><a href="/Topics/aboutTrainers.html">About Trainers</a></li>-->
         </ol>
